Fixed tasks overflow

--- a/client/styles.css
+++ b/client/styles.css
@@ -63,13 +63,15 @@ button {
   grid-template-columns: 3fr 4fr 2fr;
   border-bottom: 1px solid #d6d6d6;
   padding: 10px 0;
+  min-width: fit-content;
 }
 
 .tasks-grid-item {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  min-width: 160px;
+  width: 100%;
+  min-width: 180px;
 }
 
 .tasks-grid-item > p {
